--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -17,4 +17,8 @@ jobs:
         run: npm install
       - name: lint
         run: npm run eslint
+      - name: test
+        run: npm run test
+      - name: build
+        run: npm run build
 
