--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,6 +31,7 @@ jobs:
           wait-on: http://localhost:8080
       - name: Bump version and push tag
         uses: anothrNick/github-tag-action@1.33.0
+        if: ${{ github.event_name == 'push' }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DEFAULT_BUMP: patch
